# nosnoc

./: .gitignore  .gitmodules  .readthedocs.yaml  COPYING  LICENSE  README.md  README.md.bak  install_nosnoc.m  options_to_support.org  organization_proposal.md  organization_proposal_alt_1.md  organization_proposal_alt_2.md  settings_classes.md  states_and_control.fig
+nosnoc/: Integrator.m  Options.m  error.m  integrator.m  warning.m
codegen_templates/: CMakeLists.txt  HomotopySolver.cpp  HomotopySolver.hpp  ProblemOptions.hpp  generate_cpp_solver.py
docs/: Makefile  requirements.txt
examples/: all_examples.txt  batch_all_examples.m  run_all_examples.m  simplest_example.m  slow_leaving.m  test_script.m
examples/c_solver/: CMakeLists.txt  HomotopySolver.cpp  HomotopySolver.hpp  basic_c_solver.m  generate.py  nosnoc_solver_comp.c  nosnoc_solver_nlp.c  solver.json
organization_proposal/: nosnoc_mock_up1.m  nosnoc_mock_up2.m  organization_proposal_alt_1.md  organization_proposal_alt_2.md  settings_classes.md  short_summary.md
pds-examples/: InclusionProblem.m  collaborative_square.m  cybership.m  disk_switch.m  homotopy.m  leaving_check.m  moving_set.m  nlp_solve_example.m  nlp_solver.m  not_test.m  open_gate.m  pass_disc.m  plot_discs.m  plot_moving_set.m  projected_system_robots.m  pushing_square.m  qp_solve_example.m  qp_solver.m  simple_system.m  slow_leaving_test.m  use_tools.m
src/: CFunctionType.m  ConicModelSwitchHandling.m  ConstraintRelaxationMode.m  ControlStage.m  CrossCompMode.m  CrossCompType.m  DcsMode.m  ElasticityMode.m  FiniteElement.m  FiniteElementZero.m  FrictionModel.m  HomotopySteeringStrategy.m  IRKSchemes.m  IntegratorType.m  MpccFunction.m  MpccMode.m  MpccRelaxationMethod.m  NosnocDimensions.m  NosnocFormulationObject.m  NosnocIntegrator.m  NosnocIntegratorOptions.m  NosnocIpopt.m  NosnocIpoptCallback.m  NosnocMPCC.m  NosnocModel.m  NosnocNLP.m  NosnocOptions.m  NosnocProblem.m  NosnocProblemOptions.m  NosnocSNOPT.m  NosnocSolver.m  NosnocSolverOptions.m  NosnocSqpMethod.m  NosnocUNO.m  NosnocWORHP.m  PssMode.m  RKRepresentation.m  RKSchemes.m  RelaxationMode.m  StepEquilibrationMode.m  (+39 more)
test/: TestFESDandTimeOptions.m  (+24 more)
(+1068 files in other folders)
